Replaced top padding with an app-wide spacer to stop scrolls from going behind the navbar.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,5 @@
-/* .app {
-  overflow: hidden;
-} */
+.navbar-spacer {
+  height: 64px;
+  /* should nevcer be seen, 👇🏻 hence the super obvious colour */
+  background-color: rgb(239, 37, 37); 
+}
