--- a/frontend/src/components/SignUpBenefits/SignUpBenefits.css
+++ b/frontend/src/components/SignUpBenefits/SignUpBenefits.css
@@ -2,8 +2,6 @@
   display: flex;
   min-height: 93vh;
   background-color: var(--primary-background);
-  /* background-color: #555; */
   padding: 20px 30px;
   border-left: 1px solid #ccc;
-  margin: 10px auto;
 }
